--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#token files
+**/default_settings.js
+**/token.json
 
 # dependencies
 /node_modules
